--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://im-deane.github.io/",
 	"name": "website",
 	"version": "0.1.0",
 	"private": true,
@@ -19,7 +20,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,6 +48,7 @@
 		"@babel/preset-react": "^7.13.13",
 		"babel-loader": "^8.1.0",
 		"file-loader": "^6.1.1",
+		"gh-pages": "^3.1.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^4.7.0",
