--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://im-deane.github.io/",
+	"homepage": "https://im-deane.github.io",
 	"name": "website",
 	"version": "0.1.0",
 	"private": true,
