--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://im-deane.github.io",
+	"homepage": "https://www.tcadevelopments.com/",
 	"name": "website",
 	"version": "1.0.0",
 	"private": false,
