--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"@testing-library/user-event": "^12.8.3",
 		"bootstrap": "^5.0.0",
 		"bootstrap-icons": "^1.5.0",
+		"node-sass": "^6.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-hash-link": "^2.4.1",
 		"react-scripts": "4.0.3",
