--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-lazyload": "^3.2.0",
+		"react-player": "^2.9.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-hash-link": "^2.4.1",
 		"react-scripts": "4.0.3",
