--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"bootstrap-icons": "^1.5.0",
 		"node-sass": "^6.0.0",
 		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.1",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-lazyload": "^3.2.0",
