--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"homepage": "https://www.tcadevelopments.com/",
-	"name": "website",
+	"name": "tca__developments_website",
 	"version": "1.0.0",
 	"private": false,
 	"dependencies": {
@@ -10,7 +10,6 @@
 		"@testing-library/user-event": "^12.8.3",
 		"bootstrap": "^5.0.0",
 		"bootstrap-icons": "^1.5.0",
-		"node-sass": "^6.0.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.6.1",
 		"react-dom": "^17.0.2",
@@ -19,7 +18,7 @@
 		"react-player": "^2.9.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-hash-link": "^2.4.1",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^4.0.3",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
@@ -28,7 +27,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d build",
+		"sass": "sass src/scss:src/css/app.css --watch --no-source-map"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -52,12 +52,12 @@
 		"@babel/core": "^7.14.2",
 		"@babel/preset-env": "^7.14.2",
 		"@babel/preset-react": "^7.13.13",
-		"babel-loader": "^8.1.0",
 		"file-loader": "^6.1.1",
 		"gh-pages": "^3.1.0",
+		"sass": "^1.39.0",
+		"sass-loader": "^10.2.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^4.44.2",
-		"webpack-cli": "^4.7.0",
-		"webpack-dev-server": "^3.11.1"
+		"webpack-cli": "^4.7.0"
 	}
 }
